# docker-tag

./: .gitignore  .gitlab-ci.yml  Dockerfile  GitCommitApp.csproj  Program.cs  README.md  build.sh
cpp/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  build-local-docker.sh  conanfile.txt  main.cpp  version.h.in
